--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
                     <h4>Developpeur Front</h4>
                     <ul>
                         <li> Création de deux pages web (html /css /js) from scratch</li>
+                        <li> Refonte de page produit</li>
                     </ul>
                 </div>
                 <div class="Xpcontainer">
                     <h3>Restaurant du coeur 4 mois</h3>
                     <h4>Developpeur Front</h4>
                     <ul>
-                        <li>Mise à jour de la structure html d'un site web interne</li>
-                        <li>Création et mise en place d'un scss</li>
+                        <li>Refonte du site web réservé au interne</li>
                     </ul>
                 </div>
             </div>
