--- a/index.html
+++ b/index.html
@@ -34,6 +34,25 @@
         <article >
             <h2>Expérience</h2>
             <div class="Xpcontainer">
+                <h3>Université de Pennsylvanie</h3>
+                <h4>Developpeur Front-end / Scrum Master</h4>
+                <p class="calendar bold"><img src="img/calendar.png" alt="calendar"> 04/2019 - aujourd'hui</p>
+                <b>Developpeur</b>
+                <ul>
+                    <li>UX-UI du site en entier (figma)</li>
+                    <li>Création du template des pages Html CSS JS</li>
+                    <li>Création de carousel dynamique</li>
+                </ul>
+                <b>Scrum Master</b>
+                <ul>                     
+                    <li>Création d'un git flow pour une petite equipe (4 personnes)</li>
+                    <li>Communication, uniquement en anglais</li>
+                    <li>Mise en place de processus d’amélioration continue </li>
+                    <li>Animation des différents rituels</li>
+                    <li>Participation aux évènements double casquette Scrum / Developpeur</li>
+                </ul>
+            </div>
+            <div class="Xpcontainer">
                 <h3>Groupe Seloger</h3>
                 <h4>Developpeur Front-end / Scrum Master</h4>
                 <p class="calendar bold"><img src="img/calendar.png" alt="calendar"> 09/2019 - 03/2022</p>
