--- a/index.html
+++ b/index.html
@@ -28,25 +28,27 @@
     <section class="gauche">
         <article >
             <h2>Résumé</h2>
-            <p>Je suis un Scrum Master avec une double casquette Developpeur expérimenté.   J'applique les valeurs apprises avec le sport (rugby, e-sport) aux valeurs scrum : <span class="bold">Focus</span> - <span class="bold">Ouverture</span> - <span class="bold">Respect</span> - <span class="bold">Courage</span> - <span class="bold">Engagement</span>.</p>
-            
+            <p>Je suis un Scrum Master avec une double casquette Developpeur expérimenté.   J'applique les valeurs apprises avec le sport (rugby, e-sport) aux valeurs scrum : <span class="bold1">Focus</span> - <span class="bold1">Ouverture</span> - <span class="bold1">Respect</span> - <span class="bold1">Courage</span> - <span class="bold1">Engagement</span>.</p>
+            <br>
+            <p><img src="img/insta.png" alt="insta logo" style="width: 15px; height:auto"> Instagram : <span class="bold1"> scrum.dev.dasilva </span> pour communiquer mes astuces de dev et de Scrum master</p>
         </article>
         <article >
             <h2>Expérience</h2>
             <div class="Xpcontainer">
-                <h3>Université de Pennsylvanie</h3>
+                <h3>Université de Pennsylvanie (freelance)</h3>
                 <h4>Developpeur Front-end / Scrum Master</h4>
                 <p class="calendar bold"><img src="img/calendar.png" alt="calendar"> 04/2019 - aujourd'hui</p>
                 <b>Developpeur</b>
                 <ul>
                     <li>UX-UI du site en entier (figma)</li>
                     <li>Création du template des pages Html CSS JS</li>
-                    <li>Création de carousel dynamique</li>
+                    <li>Création de caroussel dynamique</li>
+                    <li>développement de toutes les maquettes</li>
                 </ul>
                 <b>Scrum Master</b>
                 <ul>                     
-                    <li>Création d'un git flow pour une petite equipe (4 personnes)</li>
                     <li>Communication, uniquement en anglais</li>
+                    <li>Création d'un git flow pour une petite equipe (4 personnes)</li>
                     <li>Mise en place de processus d’amélioration continue </li>
                     <li>Animation des différents rituels</li>
                     <li>Participation aux évènements double casquette Scrum / Developpeur</li>
@@ -158,7 +160,6 @@
     <sectiuon class="droite">
         <article >
             <h2>Skills</h2>
-            <h3>Code</h3>
             <ul>
                 <li class="pulse">HTML5</li>
                 <li class="pulse">SCSS / CSS3</li>
@@ -168,6 +169,7 @@
                 <li class="pulse">WordPress</li>
                 <li class="pulse">Git</li>
                 <li class="pulse">Agile</li>
+                <li class="pulse">Jira</li>
                 <li class="pulse">Scrum Psm1</li>
             </ul>
         </article>
